Fix footer on mobile and some bug css on mobile

--- a/src/components/Button/ButtonToTop/style.scss
+++ b/src/components/Button/ButtonToTop/style.scss
@@ -17,6 +17,7 @@
         font-size: var(--font-size-icon-xl);
         box-shadow: inset 0 0 8px rgba(0, 0, 0, .2);
         z-index: 100;
+        opacity: 0.6;
 
         @include mobile {
             bottom: 20px;
