--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -12,10 +12,10 @@
     color: var(--color-text-reverse);
     margin-top: 50px;
 
-    @include mobile {
-        min-height: 180px;
-        height: 200px;
-    }
+    // @include mobile {
+    //     min-height: 180px;
+    //     height: 200px;
+    // }
 
     &-content {
         padding-top: 50px;
