--- a/src/pages/HomePage/style.scss
+++ b/src/pages/HomePage/style.scss
@@ -47,7 +47,7 @@
     font-size: var(--font-size-xl);
     box-shadow: inset 0 0 8px rgba(0, 0, 0, .2);
     z-index: 100;
-    opacity: 0.8;
+    opacity: 0.6;
 
     @include mobile {
         right: 5px;
